# sample-mcp-fastmcp-python

./: .dockerignore  README.md  pyproject.toml  server.py  test_server.py  weather_models.py
