[project]
name = "weather-mcp-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "fastmcp==2.10.6",
    "httpx>=0.28.1",
]

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=1.1.0",
    "pytest>=8.4.1",
]
